<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_venta"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_bodega" />
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_monetization_on"
            android:title="@string/menu_reporte" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_local_offer"
            android:title="@string/menu_produto" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_bodega"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_bodega" />
        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_editar" />
        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_eliminar" />
        <item
            android:id="@+id/nav_danos"
            android:icon="@drawable/ic_do_not_disturb"
            android:title="@string/menu_danos" />
    </group>
    <group
        android:id="@+id/menu_acerca"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_acerca" />
    </group>
</menu>
